fixed focus jump issue.

--- a/src/assets/sass/md/_cards.scss
+++ b/src/assets/sass/md/_cards.scss
@@ -288,11 +288,17 @@
   border-color: #0d47a1;
   border-style: solid;
   border-width: thin;
+  border-radius: 5px;
 
-  box-shadow: 0px 0px 2px 2px rgba(68, 68, 68, .9);
-  -webkit-transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
+  -webkit-transition: all 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);
   transition: all 0.2s cubic-bezier(0.1, 0.7, 1.0, 0.1);
-  /*transition-timing-function: cubic-bezier(0.1, 0.7, 1.0, 0.1);*/
+  transition-timing-function: cubic-bezier(0.1, 0.7, 1.0, 0.1);
+
+  box-shadow: 2px 2px 2px 2px grey,
+  2px 2px 2px 2px grey,
+  2px 2px 2px 2px grey;
+  -webkit-transform: translateX(-3px);
+  transform: translateX(-3px);
 
   -webkit-transform: scale(1.1);
   -ms-transform: scale(1.1);
